# electron-sdk

./: .gitignore  .gitlab-ci.yml  .prettierignore  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-3rdparty.csv  NOTICE  README.md  dd-trace.tgz  eslint.config.mjs  package.json  prototype-child-processes_00_research.md  prototype-child-processes_01_prototypes.md  prototype-child-processes_02_ai-usage.md  prototype-child-processes_03_rum-mapping.md  prototype-child-processes_04_rum-mapping-prototype.md  prototype-child-processes_05_conclusion.md  prototype-child-processes_06_demo-scenario.md  prototype-child-processes_06_demo-slides.md  prototype-child-processes_07_demo-slides.md  prototype-child-processes_07_utility_instrumentation.md  prototype-child-processes_08_schemas.md  renovate.json  repository.datadog.yml  rollup.config.mjs  static-analysis.datadog.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  vitest.config.mjs
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEVELOPMENT.md  README.md  REVIEW.md  TESTING.md
e2e/: playwright.config.ts  tsconfig.json
eslint-local-rules/: no-internal-modules.mjs
minidump-processor/: Cargo.toml  README.md  package.json
minidump-processor/pkg/: minidump.d.ts  minidump.js  minidump_bg.wasm  minidump_bg.wasm.base64.js  minidump_bg.wasm.d.ts
minidump-processor/src/: lib.rs
playground/: .gitignore  .yarnrc.yml  README.md  package.json  tsconfig.json  tsconfig.renderer.json  tsconfig.test.json
scripts/: README.md  (+10 more)
(+367 files in other folders)
