[package]
name = "minidump-processor"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for rust-minidump, used in the Datadog Electron SDK to process .dmp crash files"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pinned to the last commit before regression b5e7c7a (which broke default-features=false builds).
# See https://github.com/rust-minidump/rust-minidump/issues/1139
# Update the rev once a fix is merged upstream.
minidump = { git = "https://github.com/rust-minidump/rust-minidump", rev = "91e983162f11d6932ea99cf53e94c20826411bd2" }
minidump-common = { git = "https://github.com/rust-minidump/rust-minidump", rev = "91e983162f11d6932ea99cf53e94c20826411bd2" }
minidump-processor = { git = "https://github.com/rust-minidump/rust-minidump", rev = "91e983162f11d6932ea99cf53e94c20826411bd2", default-features = false }
minidump-unwind = { git = "https://github.com/rust-minidump/rust-minidump", rev = "91e983162f11d6932ea99cf53e94c20826411bd2", default-features = false }
breakpad-symbols = { git = "https://github.com/rust-minidump/rust-minidump", rev = "91e983162f11d6932ea99cf53e94c20826411bd2", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
